# AlchemicalKnowledgeSkyrimAnniversaryEdition

./: .gitignore  CMakeLists.txt  README.md
creation engine/: .spriggit
creation engine/text yaml/: RecordData.yaml  spriggit-meta.json
creation engine/text yaml/Books/: mpAlchemicalKnowledgeBook - 000800_AlchemicalKnowledgeSkyrimAnniversaryEdition.esp.yaml
